Rename Gestion Quiz/Cours to Quiz/Cours in sidebar